feat: harden reader-runnable Hermes runtime