@@ -3,9 +3,11 @@ package com.ading.ai.hermes.toolset;
 import com.ading.ai.hermes.tool.ToolDefinition;
 import com.ading.ai.hermes.tool.ToolRegistry;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 
 public final class ToolsetCatalog {
@@ -17,8 +19,13 @@ public final class ToolsetCatalog {
             Map<String, Map<String, ToolDefinition>> definitions,
             Map<String, String> owners
     ) {
-        this.definitions = Map.copyOf(definitions);
-        this.owners = Map.copyOf(owners);
+        Map<String, Map<String, ToolDefinition>> orderedDefinitions = new LinkedHashMap<>();
+        definitions.forEach((name, tools) -> orderedDefinitions.put(
+                name,
+                Collections.unmodifiableMap(new LinkedHashMap<>(tools))
+        ));
+        this.definitions = Collections.unmodifiableMap(orderedDefinitions);
+        this.owners = Collections.unmodifiableMap(new LinkedHashMap<>(owners));
     }
 
     public static ToolsetCatalog empty() {
@@ -29,6 +36,7 @@ public final class ToolsetCatalog {
         if (toolset == null || toolset.isBlank()) {
             throw new IllegalArgumentException("toolset must not be blank");
         }
+        Objects.requireNonNull(definition, "definition must not be null");
         String owner = owners.get(definition.name());
         if (owner != null && !owner.equals(toolset)) {
             throw new IllegalArgumentException(
@@ -41,7 +49,10 @@ public final class ToolsetCatalog {
                 definitions.getOrDefault(toolset, Map.of())
         );
         toolsetDefinitions.put(definition.name(), definition);
-        nextDefinitions.put(toolset, Map.copyOf(toolsetDefinitions));
+        nextDefinitions.put(
+                toolset,
+                Collections.unmodifiableMap(new LinkedHashMap<>(toolsetDefinitions))
+        );
 
         Map<String, String> nextOwners = new LinkedHashMap<>(owners);
         nextOwners.put(definition.name(), toolset);
@@ -49,6 +60,11 @@ public final class ToolsetCatalog {
     }
 
     public ToolsetSelection select(Set<String> enabledToolsets) {
+        Set<String> unknown = new java.util.LinkedHashSet<>(enabledToolsets);
+        unknown.removeAll(definitions.keySet());
+        if (!unknown.isEmpty()) {
+            throw new IllegalArgumentException("unknown toolsets: " + String.join(", ", unknown));
+        }
         ToolRegistry registry = ToolRegistry.empty();
         Map<String, List<String>> names = new LinkedHashMap<>();
         for (Map.Entry<String, Map<String, ToolDefinition>> entry : definitions.entrySet()) {
